# qa-agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  LEARNING_GUIDE.md  LICENSE  README.md  RESULTS.md  ROADMAP.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ci.md
evals/: README.md  conftest.py  golden_set.schema.json  metrics.py  test_gate.py
evals/golden/: example_case.json
evaluation/: __init__.py
evaluation/configs/: eval.yaml
evaluation/datasets/: __init__.py  golden_v2.jsonl  schema.py
evaluation/models/: __init__.py  judge.py
evaluation/runners/: __init__.py  agent_runner.py  eval_runner.py
qa_agent/: chunker.py  cli.py  config.py  embeddings.py  llm_client.py  pdf_loader.py  vector_store.py
qa_agent/agents/: qa_expert.py
qa_agent/prompts/: qa_expert.txt
scripts/: run_golden.py  token_count.py
tests/golden/: conftest.py  golden_set.json  scoring.py  test_rag_quality.py
tests/integration/: test_ingest.py
tests/unit/: test_agent_runner.py  test_chunker.py  test_cli.py  test_config.py  test_embeddings.py  test_eval_runner.py  test_evaluation_schema.py  test_judge.py  test_llm_client.py  test_pdf_loader.py  test_qa_expert.py  test_vector_store.py
